// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withData initApollo init 1`] = `
ApolloClient {
  "cache": InMemoryCache {
    "addTypename": true,
    "config": Object {
      "addTypename": true,
      "cacheResolvers": undefined,
      "dataIdFromObject": undefined,
      "fragmentMatcher": IntrospectionFragmentMatcher {
        "isReady": false,
        "match": [Function],
      },
      "storeFactory": [Function],
    },
    "data": ObjectCache {
      "data": Object {},
    },
    "optimistic": Array [],
    "silenceBroadcast": false,
    "watches": Array [],
  },
  "defaultOptions": Object {},
  "disableNetworkFetches": false,
  "link": ApolloLink {
    "request": [Function],
  },
  "mutate": [Function],
  "query": [Function],
  "queryDeduplication": true,
  "reFetchObservableQueries": [Function],
  "resetStore": [Function],
  "ssrMode": false,
  "store": DataStore {
    "cache": InMemoryCache {
      "addTypename": true,
      "config": Object {
        "addTypename": true,
        "cacheResolvers": undefined,
        "dataIdFromObject": undefined,
        "fragmentMatcher": IntrospectionFragmentMatcher {
          "isReady": false,
          "match": [Function],
        },
        "storeFactory": [Function],
      },
      "data": ObjectCache {
        "data": Object {},
      },
      "optimistic": Array [],
      "silenceBroadcast": false,
      "watches": Array [],
    },
  },
  "version": "2.0.4",
  "watchQuery": [Function],
}
`;

exports[`withData process.browser is false getInitialProps with cookie 1`] = `
Object {
  "cache": Object {
    "$ROOT_QUERY.me": Object {
      "__typename": "User",
      "id": "50",
      "name": "hello",
    },
    "ROOT_QUERY": Object {
      "me": Object {
        "generated": true,
        "id": "$ROOT_QUERY.me",
        "type": "id",
      },
    },
  },
  "value": 99,
}
`;

exports[`withData process.browser is false getInitialProps with cookie 2`] = `
<div>
  50-hello value: 99
</div>
`;

exports[`withData process.browser is false getInitialProps without cookie 1`] = `
Object {
  "cache": Object {
    "$ROOT_QUERY.me": Object {
      "__typename": "User",
      "id": "50",
      "name": "hello",
    },
    "ROOT_QUERY": Object {
      "me": Object {
        "generated": true,
        "id": "$ROOT_QUERY.me",
        "type": "id",
      },
    },
  },
  "value": 99,
}
`;

exports[`withData process.browser is false getInitialProps without cookie 2`] = `
<div>
  50-hello value: 99
</div>
`;

exports[`withData process.browser is false when NoSSR 1`] = `
Object {
  "value": 99,
}
`;

exports[`withData process.browser is false when NoSSR 2`] = `
<div>
  - value: 99
</div>
`;

exports[`withData process.browser is false when no getInitialProps 1`] = `
Object {
  "cache": Object {
    "$ROOT_QUERY.me": Object {
      "__typename": "User",
      "id": "50",
      "name": "hello",
    },
    "ROOT_QUERY": Object {
      "me": Object {
        "generated": true,
        "id": "$ROOT_QUERY.me",
        "type": "id",
      },
    },
  },
  "context": undefined,
  "url": Object {},
}
`;

exports[`withData process.browser is false when throw error 1`] = `
Object {
  "value": 99,
}
`;

exports[`withData process.browser is true getInitialProps 1`] = `
Object {
  "value": 99,
}
`;

exports[`withData process.browser is true getInitialProps 2`] = `
Object {
  "value": 99,
}
`;

exports[`withData process.browser is true has not websocket 1`] = `
Object {
  "value": 99,
}
`;
